<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2023 Dynamia Soluciones IT S.A.S - NIT 900302344-1
  ~ Colombia / South America
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <name>DynamiaTools</name>
    <modelVersion>4.0.0</modelVersion>
    <groupId>tools.dynamia</groupId>
    <artifactId>tools.dynamia.parent</artifactId>
    <version>26.5.3</version>
    <packaging>pom</packaging>
    <organization>
        <name>Dynamia Soluciones IT SAS</name>
        <url>https://www.dynamiasoluciones.com</url>
    </organization>
    <inceptionYear>2026</inceptionYear>
    <url>https://www.dynamia.tools</url>
    <description>Fullstack web framework for java web applicacions</description>

    <developers>
        <developer>
            <name>Mario Serrano Leones</name>
            <email>mario@dynamiasoluciones.com</email>
            <organization>Dynamia Soluciones IT</organization>
            <organizationUrl>https://www.dynamiasoluciones.com</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>APACHE LICENSE, VERSION 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/dynamiatools/framework</url>
    </scm>

    <properties>
        <main.baseUri>${project.baseUri}</main.baseUri>
        <springboot.version>4.0.5</springboot.version>
        <swagger.version>2.2.46</swagger.version>
        <mongodb.version>1</mongodb.version>

        <!-- Web -->
        <zk.version>10.2.1-jakarta</zk.version>
        <dynamia.zk.version>1.2.0</dynamia.zk.version>
        <aws.version>2.44.5</aws.version>
        <minio.version>8.5.17</minio.version>

        <!--Reports -->
        <jasperreports.version>6.21.4</jasperreports.version>
        <poi.version>5.5.1</poi.version>
        <snakeyaml.version>2.5</snakeyaml.version>
        <zxing.version>3.5.3</zxing.version>
        <velocity.version>2.4.1</velocity.version>

        <!--Logging -->
        <slf4j.version>2.0.17</slf4j.version>
        <junit.version>4.13.2</junit.version>
        <hsqldb.version>1.8.0.10</hsqldb.version>
        <oshi.version>6.5.0</oshi.version>
        <jna.version>5.14.0</jna.version>


        <java.version>25</java.version>
        <target.version>25</target.version>
        <maven.compiler>3.14.0</maven.compiler>
        <source.encoding>UTF-8</source.encoding>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyyMMddhhmm</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <!-- Core modules -->
        <module>platform/core/commons</module>
        <module>platform/core/integration</module>
        <module>platform/core/navigation</module>
        <module>platform/core/actions</module>
        <module>platform/core/io</module>
        <module>platform/core/templates</module>
        <module>platform/core/domain</module>
        <module>platform/core/domain-jpa</module>
        <module>platform/core/web</module>
        <module>platform/core/crud</module>
        <module>platform/core/reports</module>
        <module>platform/core/viewers</module>

        <!-- Application modules -->
        <module>platform/app</module>

        <!-- UI Modules -->
        <module>platform/ui/ui-shared</module>
        <module>platform/ui/zk</module>

        <!-- Starters -->
        <module>platform/starters/zk-starter</module>

        <!-- Extensions -->
        <module>extensions</module>

        <!-- Themes -->
        <module>themes</module>

    </modules>



    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${target.version}</target>
                    <encoding>${source.encoding}</encoding>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.3</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <doclint>none</doclint>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.5.3</version>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <!-- General dependencies for standard applications -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.7</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
